<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.gatech.seclass.sdpcryptogram.AvailableCryptogramsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:padding="4dp"
        android:weightSum="15">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Solved: "
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/solved_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="10"
            android:textSize="18sp"/>


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Started: "
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/started_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="10"
            android:textSize="18sp"/>


        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tot. Incorrect: "
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/incorrect_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="10"
            android:textSize="18sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/request_new_cryptograms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Request New Cryptograms"
        android:textSize="12sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:weightSum="32">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="ID"
            android:textSize="18sp"
            android:textColor="#000000"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="16"
            android:text="Status"
            android:textSize="18sp"
            android:textColor="#000000"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="Incorrect"
            android:textSize="18sp"
            android:textColor="#000000"
            android:textAlignment="center"/>
    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/available_cryptograms_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>