...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Administrator"
            android:textSize="18sp"/>

        <RadioButton
            android:id="@+id/player_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="Player"
            android:textSize="18sp"/>
...
            android:layout_height="wrap_content"
            android:text="Username:"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="@integer/length_of_names"
            android:maxLines="1" />

    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:layout_marginTop="5dp"
        android:text="Login" />
...
